# chess

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .release_time  Dockerfile  Doxyfile  Makefile  Makefile.data  README.md  build.sh  data.mk  endgame.tsv  lichess-tag-roster.txt  main.py  mnonics.md  output.tsv  pgn.lex.h  plan.txt  pyproject.toml  run.sh
include/: pgn.lex.h  pgn.syntax.h
migrations/: 00000-init.sql  00001-stockfish.sql  00002-rating-band-views.sql
notebooks/: Preview-lichess-dump.ipynb
projects/: cses_problems.c  gen-graph.c  graph-chess.c  ignotum-chess.c  pgne3k.c
scripts/: add-ply.py  awkt  bestiebot.py  book-chances.py  cutt  opening-deck.py  process-eco-json.py  pull-lichess.sh  random-numbers.py  sharpness.py  sort-print.py  sup_openings.py  talk-openings.py  test.py  tsv-to-json.py  tts.py  uci-to-pgn.py  wdl.py
src/: app.c  app.h  board.c  board.h  board_move.c  board_move.h  chess.hpp  cliargs.h  commands.cpp  commands.h  debug.h  dot.c  dot.h  endgames.cpp  endgames.h  eval.cpp  eval.h  eval_db.cpp  eval_db.h  eval_tsv.cpp  eval_tsv.h  fen.c  fen.h  frontend.c  frontend.h  game.c  game.h  gameclock.c  gameclock.h  gamelist.c  gamelist.h  gc.c  gc.h  gen_system.cpp  gen_system.h  generation.c  generation.h  global.h  intake.cpp  intake.h  (+42 more)
tests/: test.h  test_board.c  test_clock.c  test_fen.c  test_frontend.c  test_game.c  test_gameclock.c  test_move.c  test_movegen.c  test_pgn.c  test_pgn_frontend.c  test_pgn_move.c  test_pgn_tag.c  test_square.c  test_strutil.c  test_symbol.c  test_tag.c  test_tagspec.c
web/: .gitignore  (+9 more)
(+30 files in other folders)
