[tool.poetry]
name = "funtime"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
tqdm = "^4.66.4"
tables = "^3.9.2"
numpy = "~1.26.4"
python-chess = "^1.999"
polars = "^1.4.0"
pyquery = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
stockfish = "^3.28.0"
prettytable = "^3.11.0"
openai = "^1.42.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
sqlfluff = "^3.1.0"
sqlglot = {extras = ["rs"], version = "^25.10.0"}
gprof2dot = "^2024.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
